# init-equation

./: README.md  pyproject.toml
init_equation/: chapters.py  equation.py  main.py
